added is_archived method on model

--- a/templates/pih_app/reviewer-dashboard.html
+++ b/templates/pih_app/reviewer-dashboard.html
@@ -7,50 +7,23 @@
         <h2>Dashboard: PIH Sierra Leone</h2>
     </div>
 
-    <div class="row justify-content-around">
-        <div class="col-sm-3" style="margin-bottom: 20px">
-            <div class="card h-100" style="width: 100%;" >
-                <img class="card-img-top" src="{% static "images/review.svg" %}" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ requests_under_review.count }} Request(s) awaiting approval</h5>
-                                <a href="{% url "pih_app:pending_review" %}" class="btn btn-primary">View Requests</a>
-                    </div>
-            </div>
-        </div>
-
-        <div class="col-sm-3" style="margin-bottom: 20px">
-            <div class="card h-100" style="width: 100%;" >
-                <img class="card-img-top" src="{% static "images/approved.svg" %}" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ approved_requests.count }} Request(s) Approved</h5><br>
-                                <a href="" class="btn btn-primary">View Requests</a>
-                    </div>
-            </div>
-        </div>
+<div class="container">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Request ID</th>
+                <th scope="col">Host</th>
+                <th scope="col">Name(s) of Visitors</th>
+                <th scope="col">Dates</th>
+                <th scope="col">Approval</th>
+                <th scope="col">Organization</th>
+                <th scope="col">Reimbursement</th>
+            </tr>
+        </thead>
+    </table>
 
 
-        <div class="col-sm-3" style="margin-bottom: 20px">
-            <div class="card h-100" style="width: 100%;" >
-                <img class="card-img-top" src="{% static "images/expenses.svg" %}" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ outstanding_expenses.count }} Expenses(s) to be paid out</h5>
-                                <a href="" class="btn btn-primary">View Expenses</a>
-                    </div>
-            </div>
-        </div>
-
-        <div class="col-sm-3" style="margin-bottom: 20px">
-            <div class="card h-100" style="width: 100%;" >
-                <img class="card-img-top" src="{% static "images/reimburse.svg" %}" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ expenses_need_reimbursement.count }} Expense(s) to be reimbursed</h5>
-                                <a href="" class="btn btn-primary">View Expenses</a>
-                    </div>
-            </div>
-        </div>
-
-    </div>
-
+</div>
 
 
 </div>
