--- a/templates/pih_app/reviewer-dashboard.html
+++ b/templates/pih_app/reviewer-dashboard.html
@@ -1,33 +1,96 @@
 {% extends 'pih_app/base.html' %}
 {% load staticfiles %}
 
+
 {% block content %}
 <div class="container">
     <div class="row justify-content-center" style="margin-top:20px; margin-bottom: 20px">
         <h2>Dashboard: PIH Sierra Leone</h2>
     </div>
 
+{% if requests %}
+
 <div class="container">
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col">Request ID</th>
+                <th scope="col">ID</th>
                 <th scope="col">Host</th>
-                <th scope="col">Name(s) of Visitors</th>
-                <th scope="col">Dates</th>
-                <th scope="col">Approval</th>
-                <th scope="col">Organization</th>
-                <th scope="col">Reimbursement</th>
+                <th scope="col">Visitor(s)</th>
+                <th scope="col" style="text-align:center; width: 10em">Arrival Date</th>
+                <th scope="col" style="text-align:center; width: 10em">Departure Date</th>
+                <th scope="col" style="text-align:center;width: 5em">Approval</th>
+                <th scope="col" style="text-align:center;width: 5em">Organization</th>
+                <th scope="col" style="text-align:center;width: 5em">Reimbursement</th>
             </tr>
         </thead>
+        <tbody>
+            {% for r in requests %}
+             <tr class="clickable-row" data-href="{% url "pih_app:review_request" id=r.id %}">
+                <td>{{ r.id }}</td>
+                <td>{{ r.host }}</td>
+                <td>{{ r.print_names_of_visitors }}</td>
+                <td style="text-align:center; width: 10em">{{ r.arrival_date }}</td>
+                <td style="text-align:center; width: 10em">{{ r.departure_date }}</td>
+                <td style="text-align:center;width: 5em">
+                    {% if r.status == 'review' %}
+                        <img src="{% static "images/not_completed.svg" %}" alt="" data-toggle="tooltip" data-placement="top" title="Request needs approval">
+                    {% elif r.status == 'approved' %}
+                        <img src="{% static "images/completed.svg" %}" alt="" data-toggle="tooltip" data-placement="top" title="Request approved">
+                    {% endif %}
+
+                </td>
+                <td style="text-align:center;width: 5em">
+                    {% if r.status == 'approved' %}
+                    <img src="{% static 'images/'|add:r.organization_status|add:'.svg' %}" alt="" data-toggle="tooltip" data-placement="top" title="{{ r.get_organized_counter.0 }} out of {{ r.get_organized_counter.1 }} item(s) organized">
+                    {% endif %}
+                </td>
+                <td style="text-align:center;width: 5em">
+                    {% if r.status == 'approved' and r.organization_status == 'completed' %}
+                    <img src="{% static 'images/'|add:r.reimbursement_status|add:'.svg' %}" alt="" data-toggle="tooltip" data-placement="top" title="{{ r.get_reimbursement_counter.0 }} out of {{ r.get_reimbursement_counter.1 }} expense(s) reimbursed">
+                    {% endif %}
+                </td>
+             </tr>
+            {% endfor %}
+        </tbody>
     </table>
 
 
 </div>
 
+{% else %}
+    
+<div class="text-center">
+    <h5>There are currently no active Requests that need reviewing</h5>
+</div>
+<div class="row justify-content-center">
+    <a style="margin:20px" class="btn btn-primary" href="{% url "pih_app:submit_request" %}">
+        Submit new Request
+    </a>
+    <a style="margin:20px" class="btn btn-primary" href="">
+        View Archive
+    </a>
+</div>
+
+{% endif %}
 
 </div>
 
 
+
+{% endblock %}
+
+{% block customjs %}
+
+<script>
+    $(".clickable-row").click(function() {
+        window.location = $(this).data("href");
+    });
+
+    $('.clickable-row').css('cursor', 'pointer')
+
+
+
+</script>
 
 {% endblock %}
