--- a/templates/pih_app/expenses/other.html
+++ b/templates/pih_app/expenses/other.html
@@ -23,19 +23,6 @@
 <div class="container" style="margin-top: 20px; margin-bottom: 20px; margin-left:30%; display: none" id="other-expense-form">
     <form action="" method="post">
     {% csrf_token %}
-        <div class="form-group">
-            <div class="form-group" >
-                <label for="id_notes">Please Describe any other expenses</label>
-            <div class="row" style="margin-left:10px">
-                <textarea name="notes" id="id_notes" cols="100" rows="5" maxlength="1000"></textarea>
-            </div>
-        </div>
-        <p>{{ form.organized_by_us.label_tag }}
-            <input type="checkbox" name="organized_by_us" id="id_organized_by_us" style="width:15px;height: 15px">
-        </p>
-        <p id="organizer_name" style="display:none">
-            {{ form.name_of_organizer.label_tag }}{{ form.name_of_organizer }}
-        </p>
         <p>
             {{ form.expenses_covered_by.label_tag }}{{ form.expenses_covered_by }}
         </p>
@@ -43,7 +30,24 @@
             {{ form.expenses_amount.label_tag }}{{ form.expenses_amount }}
         </p>
 
+        <p>{{ form.organized_by_us.label_tag }}
+            <input type="checkbox" name="organized_by_us" id="id_organized_by_us" style="width:15px;height: 15px">
+            <input id="disabled-checkbox" type="checkbox" disabled="disabled" checked="checked"  style="width:15px;height: 15px; display:none"
+            />
+        </p>
+        <p id="organizer_name" style="display:none">
+            {{ form.name_of_organizer.label_tag }}{{ form.name_of_organizer }}
+        </p>
+
+        <div class="form-group">
+            <div class="form-group" >
+                {{ form.notes.label_tag }}
+            <div class="row" style="margin-left:10px">
+                <textarea name="notes" id="id_notes" cols="100" rows="5" maxlength="1000"></textarea>
+            </div>
         </div>
+        </div>
+
         <input type="submit" value="Confirm & Next" class="btn btn-primary">
     </form>
 
