--- a/templates/pih_app/expenses/visa.html
+++ b/templates/pih_app/expenses/visa.html
@@ -17,6 +17,7 @@
     </div>
 </div>
 
+
 <div class="container" style="margin-top: 20px; margin-bottom: 20px; margin-left:20%">
     <form action="" method="post">
     {% csrf_token %}
@@ -50,14 +51,10 @@
 <button class="btn btn-secondary" onclick="goBack()" style="margin-top: 20px">Go Back</button>
 </div>
 </div>
+</div>
 {% endblock %}
 
 
 {% block customjs %}
-        <script>
-    function goBack() {
-  window.history.back();
-}
-    </script>
     <script src="{% static "js/expense.js" %}"></script>
 {% endblock %}
