--- a/templates/pih_app/expenses/transport.html
+++ b/templates/pih_app/expenses/transport.html
@@ -8,6 +8,7 @@
 
 
 
+
 <div class="container" style="margin-top: 20px">
     <div class="row justify-content-center">
         <h3> Submit new Request</h3>
@@ -45,19 +46,16 @@
         </div>
         </div>
 
+
         <input type="submit" value="Confirm & Next" class="btn btn-primary">
     </form>
 <button class="btn btn-secondary" onclick="goBack()" style="margin-top: 20px">Go Back</button>
+</div>
 </div>
 </div>
 {% endblock %}
 
 
 {% block customjs %}
-        <script>
-    function goBack() {
-  window.history.back();
-}
-    </script>
     <script src="{% static "js/expense.js" %}"></script>
 {% endblock %}
