--- a/templates/pih_app/view-approved-requests.html
+++ b/templates/pih_app/view-approved-requests.html
@@ -9,27 +9,27 @@
     <div class="container">
     <a class="btn btn-secondary" href="{% url "pih_app:personal_dashboard" %}" style="margin-top: 10px">Return</a>
     <div class="row justify-content-center" style="margin:10px">
-        <h3>Requests awaiting approval</h3>
+        <h3>Approved Requests</h3>
     </div>
     <div class="row justify-content-center" style="margin:10px">
-        <h5>The following Requests need to be approved by a Reviewer</h5>
+        <h5>The following Requests have been approved by a Reviewer</h5>
     </div>
         <div class="row">
 
             {% for request in r %}
             <div class="col-md-4" style="margin-bottom: 20px">
-            <div class="card h-100" style="width: 70%;" >
+            <div class="card h-100" style="width: 90%;" >
                 <img class="card-img-top" src="{% static "images/review.svg" %}" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Request(s) ID {{ request.id }}</h5>
                         <p>
                             Submitted {{ request.submission_date|timesince|upto:','}} ago
-                        </p>
-                        <p>
+                        <br>
                             <strong>Visitors:</strong> {{ request.print_names_of_visitors }}
-                        </p>
-                        <p>
+                        <br>
                            <strong>Arrival Date:</strong> {{ request.arrival_date }}
+                        <br>
+                            Approved by {{ request.reviewer }} {{ request.review_date|timesince|upto:',' }} ago
                         </p>
                          <a href="{% url "pih_app:review_request" id=request.id %}" class="btn btn-primary">View Request</a>
                     </div>
