--- a/templates/pih_app/base.html
+++ b/templates/pih_app/base.html
@@ -51,7 +51,7 @@
         <a class="nav-link" href="{% url "pih_app:submit_request" %}">Submit New Request</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Archive</a>
+        <a class="nav-link" href="{% url 'pih_app:archive' %}">Archive</a>
       </li>
 
       <li class="nav-item dropdown">
